fix spacing on SPDPRK page and add background

--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -269,7 +269,6 @@
 
     .aboutSection2GridElement {
         margin: 0px;
-        padding: 0;
     }
 
     .aboutSection2GridElement > p {
